UCF-APR2.4/ftr main/force-app/main/default/objects/WorkGroup__c/WorkGroup__c.object-meta.xml
<CustomObject>
    <label>Work Group</label>
    <nameField>
        <label>Work Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>