UCF-APR2.4/ftr main/force-app/main/default/objects/WorkGroup__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Network_Project_Specialist__c</fullName>
                <default>true</default>
                <label>Network Project Specialist</label>
            </value>
            <value>
                <fullName>Implementor_PM__c</fullName>
                <label>Project Manager</label>
            </value>
            <value>
                <fullName>Order_Provisioner__c</fullName>
                <label>Order Provisioner</label>
            </value>
            <value>
                <fullName>Network Cost Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>