UCF-APR2.4/ftr main/force-app/main/default/objects/WorkGroup__c/fields/ProductsForCheckingExistingRecords__c.field-meta.xml
<CustomField>
    <fullName>ProductsForCheckingExistingRecords__c</fullName>
    <label>Products for checking existing orders</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FOTS</fullName>
            </value>
            <value>
                <fullName>Ethernet</fullName>
            </value>
            <value>
                <fullName>Frontier AnyWare UCaaS</fullName>
            </value>
            <value>
                <fullName>Frontier Anyware Mitel Hosted</fullName>
            </value>
            <value>
                <fullName>UCF</fullName>
            </value>
            <value>
                <fullName>UCaaS/UCF</fullName>
            </value>
            <value>
                <fullName>Managed Enterprise WiFi</fullName>
            </value>
            <value>
                <fullName>SDWAN</fullName>
            </value>
            <value>
                <fullName>EIAE-LAN</fullName>
            </value>
            <value>
                <fullName>E-LAN + EIA</fullName>
            </value>
            <value>
                <fullName>EVPL</fullName>
            </value>
            <value>
                <fullName>Managed Router</fullName>
            </value>
            <value>
                <fullName>SIP</fullName>
            </value>
            <value>
                <fullName>SIP Trunking</fullName>
            </value>
            <value>
                <fullName>IP Connect</fullName>
            </value>
            <value>
                <fullName>E-Reach</fullName>
            </value>
            <value>
                <fullName>Off-Net</fullName>
            </value>
            <value>
                <fullName>IPVPN</fullName>
            </value>
            <value>
                <fullName>SDWAN - E-Reach/Off-Net Ethernet</fullName>
            </value>
            <value>
                <fullName>SDWAN - New or Upgrade Ethernet</fullName>
            </value>
            <value>
                <fullName>EIA</fullName>
            </value>
            <value>
                <fullName>E-LAN</fullName>
            </value>
            <value>
                <fullName>Off-Net Ethernet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>