UCF-APR2.4/ftr main/force-app/main/default/objects/WorkGroup__c/fields/Profiles__c.field-meta.xml
<CustomField>
    <fullName>Profiles__c</fullName>
    <label>Profiles allowed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#Project Manager</fullName>
            </value>
            <value>
                <fullName>#Project Manager - Supervisor Level</fullName>
                <label>#Project Manager – Supervisor Level</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>