UCF-APR2.4/ftr main/force-app/main/default/objects/WorkGroup__c/recordTypes/NCM.recordType-meta.xml
<RecordType>
    <fullName>NCM</fullName>
    <active>true</active>
    <description>Network Cast Management</description>
    <label>NCM</label>
</RecordType>