UCF-APR2.4/ftr main/force-app/main/default/objects/WorkGroup__c/recordTypes/Order_Type.recordType-meta.xml
<RecordType>
    <fullName>Order_Type</fullName>
    <active>true</active>
    <label>Order Type</label>
</RecordType>