UCF-APR2.4/ftr main/force-app/main/default/objects/WorkGroup__c/recordTypes/Products.recordType-meta.xml
<RecordType>
    <fullName>Products</fullName>
    <active>true</active>
    <label>Products</label>
</RecordType>