UCF-APR2.4/ftr main/force-app/main/default/objects/WorkGroup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>